Fix for footer not showing in IE11

--- a/src/client/components/App/App.scss
+++ b/src/client/components/App/App.scss
@@ -56,7 +56,7 @@ body {
 
 main {
   display: flex;
-  flex: 1;
+  flex: 1 0 auto;
   padding: 0;
   margin-top: $mininav-height;
   &.auth {
